<resources>
    <string name="app_name">Firebase</string>
    <string name="crear_cuenta_email_password">Crear cuenta con email/password</string>
    <string name="titulo_actividad_crear_cuenta">Crear Cuenta</string>

    <!-- Strings related to login -->
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="confirmar_password">Confirmar Contraseña</string>
    <string name="accion_iniciar_sesion">Iniciar Sesión</string>
    <string name="accion_crear_cuenta">Crear Cuenta</string>
    <string name="accion_crear_cuenta_corto">Crear</string>
    <string name="passwords_son_diferentes">Passwords son diferentes.</string>
    <string name="passwords_tamaño">Password debe ser de 6 o más letras</string>
    <string name="hubo_error">Hubo un error.</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>
    <string name="boton_iniciar_sesion">Iniciar Sesión</string>
    <string name="iniciar_sesion_google">Iniciar Sesión con Google</string>
    <string name="sesion_fb">Iniciar sesión con Facebook</string>
    <string name="sesion_twitter">Iniciar sesión con Twitter</string>
    <string name="sesion_anonima">Iniciar sesión anónima</string>

    <!-- IDs -->
    <!-- TODO: agreguen su app id aquí -->
    <string name="facebook_app_id">TU_APP_ID</string>
    <!-- TODO: Agreguen su Twitter Api Key aquí -->
    <string name="twitter_api_key">TU_TWITTER_API_KEY</string>
    <!-- TODO: Agreguen su Twitter Api Secret aquí -->
    <string name="twitter_api_secret">TU_TWITTER_API_SECRET</string>
</resources>
